--- a/articles/2e7b80b043e746.md
+++ b/articles/2e7b80b043e746.md
@@ -3,7 +3,7 @@ title: "Claude Projectsを使って雑に1次レビューしてもらう"
 emoji: "🍦"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["AI", "生成AI", "LLM", "Claude"]
-published: false
+published: true
 ---
 # 読んでほしい方
 - 業務でLLM使ってるけど、なんだかんだ質問して答えてもらうぐらいしか使えてないなあ...という方
